Calendar: Prefer html/markdown description in preview
Currently one can edit and view the calendar and task descriptions in markdown as long as one is in the edit window.
-
For calendar entries the description when hovering over an event is not interpreted.
-
For tasks the markdown text in the overview windows is not interpreted.
-
Also in the reminders, the markdown text is not interpreted
It would be nice, if in all views of the application, the description field is interpreted as markdown and the config is a "global" one.
Edited by Clemens Sonnleitner