evo-I#2672 - Calendar: Prefer html/markdown description in preview

- add helper function to get localized property value with properties
  filtered by the caller

- set in the WebDAV Notes backend a helper property to let the clients
  know the note text is a markdown, not a plain text

Related to https://gitlab.gnome.org/GNOME/evolution/-/issues/2672